refact: refactoring to implement a balance prior to the initial balance.