@@ -25,14 +25,59 @@ public class LedgerServiceImpl implements LedgerService{
             LocalDateTime dateStart,
             LocalDateTime dateEnd
     ){
-        List<InventoryMovement> movements = movementRepository.findAll()
+        List<InventoryMovement> allMovements = movementRepository.findAll()
                 .stream()
                 .filter(m -> m.getProduct().getId().equals(productId))
-                .collect(Collectors.toList());
+                .toList();
 
-        if (movements.isEmpty()){
+        if (allMovements.isEmpty()){
             throw new EntityNotFoundException("Nenhuma movimentação foi encontrada para o Item");
         }
+        // ======>CALCULA SALDO INICIAL<====
+        int balance = 0;
+        if (dateStart != null){
+            List<InventoryMovement> previousMovement =
+                    allMovements.stream()
+                            .filter(m-> m.getCreatedAt().isBefore(dateStart))
+                            .toList();
+            for (InventoryMovement m : previousMovement){
+
+                int entry = 0;
+                int exit = 0;
+
+                switch (m.getType()){
+                    case RECEIVING -> entry = m.getQuantity();
+                    case PICKING -> exit = m.getQuantity();
+                    case TRANSFER -> {
+                        if (locationId != null){
+                            if (m.getDestinationLocation() != null &&
+                            m.getDestinationLocation().getId().equals(locationId)
+                            ){
+                                entry = m.getQuantity();
+                            }
+                            if (m.getSourceLocation() != null &&
+                            m.getSourceLocation().getId().equals(locationId)
+                            ){
+                                exit = m.getQuantity();
+                            }
+                        } else {
+                            exit = m.getQuantity();
+                        }
+                    }
+                    case ADJUSTMENT -> {
+                        if (m.getQuantity() >= 0){
+                            entry = m.getQuantity();
+                        } else {
+                            exit = Math.abs(m.getQuantity());
+                        }
+                    }
+                }
+                balance = balance + entry - exit;
+            }
+        }
+        // =====FILTRAR POR PERIODO<=====
+        List<InventoryMovement> movements = allMovements;
+
         if (dateStart != null){
             movements = movements.stream()
                     .filter(m-> !m.getCreatedAt().isBefore(dateStart))
@@ -43,12 +88,24 @@ public class LedgerServiceImpl implements LedgerService{
                     .filter(m-> !m.getCreatedAt().isAfter(dateEnd))
                     .collect(Collectors.toList());
         }
-        movements.sort(Comparator.comparing(InventoryMovement::getCreatedAt));
+        movements = movements.stream()
+                .sorted((a, b) -> a.getCreatedAt().compareTo(b.getCreatedAt()))
+                .toList();
 
-        int balance = 0;
-
+        // ====>GERAR O LEDGER<=====
         List<LedgerResponseDto> ledGer = new java.util.ArrayList<>();
-
+        // ====>LINHA DE SALDO INICIAL<====
+        if (dateStart != null){
+            ledGer.add(LedgerResponseDto.builder()
+                            .date(dateStart)
+                            .type(null)
+                            .entry(0)
+                            .exit(0)
+                            .balance(balance)
+                            .reason("Saldo Inicial")
+                    .build()
+            );
+        }
         for (InventoryMovement m : movements){
             int entry = 0;
             int exit = 0;
